# ai_assist

./: .dockerignore  .env.docker.example  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MVP для Telegram-бота _ИИ-Компаньон_ - Минимально.md  Phase_1_optimisation.md  README.md  clear_webhook.py  debug_database_config.py  debug_generate_ai_response.py  debug_handle_text_message.py  debug_user_not_found.py  docker-compose.web.yml  docker-compose.yml  force_stop_bot.py  issure_http_client.txt  main.py  model_description.txt  models_assist.txt  nginx.conf  pyproject.toml  pytest.ini  ruff_errors.txt  ruff_errors_after_exclusions.txt  ruff_errors_final.txt  ruff_errors_new.txt  test_caching.py  test_config_simple.py  test_database_config.py  test_db_connection.py  test_pydantic.py  test_pydantic_behavior.py  text_platov_ai.txt
.github/workflows/: cd.yml  ci.yml  docs.yml  security.yml
.qoder/rules/: uv.md
alembic/: __init__.py  env.py
alembic/versions/: 82d758b7d903_add_foreign_key_constraint_to_.py  add_payments_table.py  add_user_verification_and_consent_fields.py
app/: __init__.py  config.py  constants.py  database.py  lexicon.py  log_lexicon.py  web.py
app/compliance/: __init__.py  age_verification.py  audit_logger.py  consent_manager.py  legal_texts.py
app/config/: load_balancer.py  scaling.py
app/constants/: __init__.py  config.py  errors.py
app/core/: dependencies.py  service_registry.py
app/handlers/: __init__.py  admin.py  callbacks.py  health.py  help.py  language.py  limits.py  message.py  onboarding.py  premium.py  profile.py  start.py
app/keyboards/: __init__.py  inline.py  onboarding_keyboards.py
app/lexicon/: __init__.py  ai_prompts.py  ai_providers.py  callbacks.py  en.py  gettext.py  keyboards.py  message.py  ru.py  start.py  utils.py
app/log_lexicon/: __init__.py  ai_providers.py  callbacks.py  config.py  database.py  en.py  keyboards.py  main.py  message.py  ru.py  start.py  utils.py
app/middleware/: __init__.py  admin.py  anti_spam.py  auth.py  (+11 more)
docs/: Deployment.md  Diary.md  Docker.md  Payment.md  Project.md  Tasktracker.md  Testing.md  anti_spam_message_counting_summary.md  caching-architecture.md  changelog.md  compliance-system.md  conversation-context.md  conversation_serialization_fix.md  database_context_serialization_fix.md  documentation-update-summary.md  phase2_optimization.md  qa.md  testing_strategy.md
init-db/: 01-init.sh
scripts/: deploy.sh  start_web.bat  start_web.sh  test_api.py
tests/: .env.example  __init__.py  conftest.py  load_test.py  test_admin_handler.py  test_admin_middleware.py  test_ai_prompts.py  test_anti_spam_middleware.py  test_app_config.py  test_auth_middleware.py  test_callbacks.py  test_commands.py  test_config.py  test_constants_imports.py  test_content_filter.py  test_conversation_service_serialization.py  test_database_context_serialization.py  test_database_security.py  test_emotional_profiling.py  test_emotional_support_prompts.py  test_health_handler.py  test_language.py  test_language_persistence.py  test_language_selection.py  test_language_translations.py  test_message_handler.py  test_middleware.py  test_middleware_integration.py  test_middleware_registration.py  test_models.py  test_new_commands.py  test_onboarding.py  test_payment_service.py  test_start_handler.py  test_user_id_fix.py
(+70 files in other folders)
