[project]
name = "ai-assist"
version = "0.1.0"
description = "Telegram-бот ИИ-Компаньон для эмоциональной поддержки"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.1",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "loguru>=0.7.2",
    "psycopg2-binary>=2.9.10",
    "pytest-asyncio>=1.1.0",
    "pre-commit>=4.3.0",
    "mypy>=1.17.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
# Добавляем исключения для не критичных ошибок
ignore = ["ANN401", "COM812", "ERA001", "RUF001", "RUF002", "RUF003", "S105", "SLF001", "PLR2004", "F401", "ARG002", "PT011", "PT012", "PT019", "TRY300", "TRY301", "B017", "SIM117", "PLC0415", "INP001", "ISC002", "Q000", "EM102", "T201", "PTH123", "S324", "S607", "PLW1510", "B904", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "RUF012", "PYI036", "SIM103", "TRY003", "DTZ011", "E722", "DTZ001", "DTZ005", "PLW0603", "E402", "E501"]

# Отключаем проверку кириллических символов в комментариях для файлов с русской документацией
[tool.ruff.lint.per-file-ignores]
"app/database.py" = ["RUF003"]
"app/config.py" = ["RUF002", "RUF003"]
"app/__init__.py" = ["RUF001"]
"app/constants.py" = ["RUF002", "RUF003"]
"tests/*" = ["S101", "RUF001", "RUF002", "RUF003", "PLR2004"]